Fixed bug in pawn class oops

--- a/ProjectMetaRacers/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ProjectMetaRacers/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -2318,10 +2318,10 @@ UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Enhan
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,InputSettings.Bindings.ActionMappings.MoveForward,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.Lookup,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.NewAxisMapping_1,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,
 K2Node_CustomEvent=
 LandscapeGizmoRenderComponent=LandscapeGizmoRenderComponent.TransformCommon.Transform,LandscapeGizmoRenderComponent.Physics.ConstraintsGroup,LandscapeGizmoRenderComponent.Collision.Collision,
-Landscape=Landscape.Collision.Collision,
-SceneComponent=Landscape.Collision.Collision,LandscapeStreamingProxy.TransformCommon.Transform,
+Landscape=Landscape.Collision.Collision,LandscapeStreamingProxy.TransformCommon.Transform,
+SceneComponent=
 LandscapeSplineControlPoint=LandscapeSplineControlPoint.Collision.Collision,
-CapsuleComponent=
+CapsuleComponent=Landscape.Collision.Collision,LandscapeStreamingProxy.TransformCommon.Transform,
 PlayerStart=Landscape.Collision.Collision,LandscapeStreamingProxy.TransformCommon.Transform,
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,
 WorldPartitionRuntimeSpatialHash=
@@ -2887,17 +2887,17 @@ EditorLoadingSavingSettings="\"Object\" \"Object.AutoReimport\" \"Object.Bluepri
 CrashReportsPrivacySettings="\"Object\" \"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object\" \"Object.Options.bSendUsageData\" "
 LandscapeGizmoRenderComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
 LandscapeComponent=
-Landscape="\"Object.Collision.BodyInstance\" "
+Landscape="\"Object.Lighting.LightingChannels\" \"Object.Lightmass.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 LandscapeProxy="\"Object.Lighting.LightingChannels\" \"Object.Lightmass.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 PartitionActor="\"Object.Lighting.LightingChannels\" \"Object.Lightmass.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 LandscapeSplineControlPoint="\"Object.Collision.BodyInstance\" "
 LandscapeSplineSegment="\"Object.LandscapeSplineSegment\" \"Object.LandscapeSplineMeshes\" \"Object.LandscapeSplineMeshes.SplineMeshes\" \"Object.LandscapeSplineMeshes.SplineMeshes.SplineMeshes[0]\" \"Object.Collision.BodyInstance\" "
 BoxComponent="\"Object\" \"Object.Collision.BodyInstance\" "
-ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+ShapeComponent="\"Object\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 GeneralProjectSettings="\"Object\" "
@@ -2968,7 +2968,7 @@ StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 SpringArmComponent="\"Object\" "
 CameraComponent="\"Object\" "
-CapsuleComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+CapsuleComponent="\"Object\" "
 BP_PlayerCar_C=
 PlayerPawn=
 Pawn=
