Test commit round 1

--- a/ProjectMetaRacers/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ProjectMetaRacers/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -158,8 +158,8 @@ CurrentPosGridSize=0
 LastLevel=/Game/Landscape/Main_Landscape
 
 [ModuleFileTracking]
-ProjectMetaRacers.TimeStamp=2023.07.06-01.57.14
-ProjectMetaRacers.LastCompileMethod=Runtime
+ProjectMetaRacers.TimeStamp=2023.07.06-02.11.27
+ProjectMetaRacers.LastCompileMethod=External
 StorageServerClient.TimeStamp=2023.05.25-02.37.59
 StorageServerClient.LastCompileMethod=Unknown
 CookOnTheFly.TimeStamp=2023.05.25-02.37.54
@@ -1178,7 +1178,7 @@ SequencerWidgets.TimeStamp=2023.05.25-02.37.58
 SequencerWidgets.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=185.000 Y=10.000
@@ -2324,7 +2324,7 @@ LandscapeSplineControlPoint=LandscapeSplineControlPoint.Collision.Collision,
 CapsuleComponent=Landscape.Collision.Collision,LandscapeStreamingProxy.TransformCommon.Transform,
 PlayerStart=Landscape.Collision.Collision,LandscapeStreamingProxy.TransformCommon.Transform,
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,
 LandscapeStreamingProxy=Landscape.Collision.Collision,LandscapeStreamingProxy.TransformCommon.Transform,
 WorldDataLayers=Landscape.Collision.Collision,
 BoxComponent=Landscape.Collision.Collision,BP_PlayerCar_C.Physics.ConstraintsGroup,BP_PlayerCar_C.PostProcess.Lens
