--- a/ProjectMetaRacers/Config/DefaultEngine.ini
+++ b/ProjectMetaRacers/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Landscape/Main_Landscape.Main_Landscape
+EditorStartupMap=/Game/Levels/Main_Landscape.Main_Landscape
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -56,6 +56,7 @@ r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
+r.DefaultFeature.MotionBlur=False
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
