--- a/ProjectMetaRacers/Config/DefaultInput.ini
+++ b/ProjectMetaRacers/Config/DefaultInput.ini
@@ -93,6 +93,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="VehiclePitch",Scale=1.000000,Key=Gamepad_LeftY)
 +AxisMappings=(AxisName="VehicleRoll",Scale=1.000000,Key=Gamepad_LeftX)
 +AxisMappings=(AxisName="VehicleYaw",Scale=1.000000,Key=Gamepad_RightX)
++AxisMappings=(AxisName="Camera Scroll",Scale=-1.000000,Key=MouseScrollDown)
++AxisMappings=(AxisName="Camera Scroll",Scale=1.000000,Key=MouseScrollUp)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
