added pause to player

--- a/ProjectMetaRacers/Config/DefaultInput.ini
+++ b/ProjectMetaRacers/Config/DefaultInput.ini
@@ -80,6 +80,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="HandBrake",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="GearChangeUp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Up)
 +ActionMappings=(ActionName="GearChangeDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Down)
++ActionMappings=(ActionName="PauseGame",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
 +AxisMappings=(AxisName="GearChangeDown",Scale=1.000000,Key=Gamepad_LeftShoulder)
 +AxisMappings=(AxisName="GearChangeDown",Scale=1.000000,Key=Down)
 +AxisMappings=(AxisName="Throttle",Scale=1.000000,Key=Gamepad_RightTriggerAxis)
