saved my work on UI

--- a/ProjectMetaRacers/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ProjectMetaRacers/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -160,8 +160,8 @@ CurrentPosGridSize=1
 LastLevel=/Game/Levels/Main_Landscape
 
 [ModuleFileTracking]
-ProjectMetaRacers.TimeStamp=2023.07.20-06.46.33
-ProjectMetaRacers.LastCompileMethod=Runtime
+ProjectMetaRacers.TimeStamp=2023.07.23-23.24.52
+ProjectMetaRacers.LastCompileMethod=External
 StorageServerClient.TimeStamp=2023.05.25-03.00.35
 StorageServerClient.LastCompileMethod=External
 CookOnTheFly.TimeStamp=2023.05.25-03.00.10
@@ -1187,18 +1187,12 @@ PhysicsAssetEditor.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/GamePieces/BP_BoostPad.BP_BoostPad
-OpenAssetsAtExit=/Game/GamePieces/BP_OutOfBounds.BP_OutOfBounds
-OpenAssetsAtExit=/Game/GamePieces/FinishLine/BP_FinishLine.BP_FinishLine
-OpenAssetsAtExit=/Game/ProjectMetaRacers/Framework/GM_TimedLevel.GM_TimedLevel
-OpenAssetsAtExit=/Game/GamePieces/BP_JumpPad.BP_JumpPad
-OpenAssetsAtExit=/Game/Player/BP_PlayerCar.BP_PlayerCar
 
 [RootWindow]
 ScreenPosition=X=-8.000 Y=2.000
 ScreenPosition=X=636.000 Y=336.000
 WindowSize=X=1282.000 Y=722.000
-WindowSize=X=1285.000 Y=725.000
+WindowSize=X=1286.400 Y=726.400
 None=======
 OpenAssetsAtExit=/Game/Player/BP_PlayerCar.BP_PlayerCar
 InitiallyMaximized=True
@@ -2996,7 +2990,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/GamePieces/StartLine
+ContentBrowserDrawer.SelectedPaths=/Game/UI
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3108,25 +3102,25 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/GamePieces/BP_OutOfBounds
-MRUItem1=/Game/Sounds/BackgroundMusic
-MRUItem2=/Game/Sounds/NewMetaSoundSource
-MRUItem3=/Game/Sounds/lifelike-126735
-MRUItem4=/Game/Levels/Main_Landscape
-MRUItem5=/Game/Player/BP_PlayerCar
-MRUItem6=/Game/ProjectMetaRacers/Framework/SpawnPlayerCar
-MRUItem7=/Game/GamePieces/BP_JumpPad
-MRUItem8=/Game/Levels/AltMap
-MRUItem9=/Game/ProjectMetaRacers/Framework/GM_ProjectMetaRacers
-MRUItem10=/Game/GamePieces/FinishLine/M_FinshLine
-MRUItem11=/Game/GamePieces/BP_FinishLine
-MRUItem12=/Game/GamePieces/BP_Checkpoint
-MRUItem13=/Game/GamePieces/BP_BoostPad
-MRUItem14=/Game/Player/TorqueCurve
-MRUItem15=/Game/GamePieces/StartLine/BP_StartLine
-MRUItem16=/Game/Levels/Road/Road_Spline_Model_For_UE5_Tutorial_-_Gorka_Games
-MRUItem17=/Game/GamePieces/BP_CircleCheckpoint
-MRUItem18=/Game/UI/pauseMenu
+MRUItem0=/Game/UI/pauseMenu
+MRUItem1=/Game/GamePieces/BP_OutOfBounds
+MRUItem2=/Game/Sounds/BackgroundMusic
+MRUItem3=/Game/Sounds/NewMetaSoundSource
+MRUItem4=/Game/Sounds/lifelike-126735
+MRUItem5=/Game/Levels/Main_Landscape
+MRUItem6=/Game/Player/BP_PlayerCar
+MRUItem7=/Game/ProjectMetaRacers/Framework/SpawnPlayerCar
+MRUItem8=/Game/GamePieces/BP_JumpPad
+MRUItem9=/Game/Levels/AltMap
+MRUItem10=/Game/ProjectMetaRacers/Framework/GM_ProjectMetaRacers
+MRUItem11=/Game/GamePieces/FinishLine/M_FinshLine
+MRUItem12=/Game/GamePieces/BP_FinishLine
+MRUItem13=/Game/GamePieces/BP_Checkpoint
+MRUItem14=/Game/GamePieces/BP_BoostPad
+MRUItem15=/Game/Player/TorqueCurve
+MRUItem16=/Game/GamePieces/StartLine/BP_StartLine
+MRUItem17=/Game/Levels/Road/Road_Spline_Model_For_UE5_Tutorial_-_Gorka_Games
+MRUItem18=/Game/GamePieces/BP_CircleCheckpoint
 MRUItem19=/Engine/EditorBlueprintResources/StandardMacros
 
 [Interchange_StackName__Assets__PipelineClassName_InterchangeGenericMaterialPipeline]
