changed the car blueprint

--- a/ProjectMetaRacers/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ProjectMetaRacers/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1187,12 +1187,13 @@ PhysicsAssetEditor.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Player/BP_PlayerCar.BP_PlayerCar
 
 [RootWindow]
 ScreenPosition=X=-8.000 Y=2.000
 ScreenPosition=X=636.000 Y=336.000
 WindowSize=X=1282.000 Y=722.000
-WindowSize=X=1286.400 Y=726.400
+WindowSize=X=1288.000 Y=728.000
 None=======
 OpenAssetsAtExit=/Game/Player/BP_PlayerCar.BP_PlayerCar
 InitiallyMaximized=True
@@ -1428,10 +1429,10 @@ BakeInputMeshProperties.BakeInput=True
 BakeMeshAttributeMapsResultToolProperties.Results=True
 BakeVisualizationProperties.Preview=True
 GeneralProjectSettings.About=True
-GeneralProjectSettings.Publisher=True
-GeneralProjectSettings.Legal=True
-GeneralProjectSettings.Displayed=True
-GeneralProjectSettings.Settings=True
+GeneralProjectSettings.Publisher=False
+GeneralProjectSettings.Legal=False
+GeneralProjectSettings.Displayed=False
+GeneralProjectSettings.Settings=False
 CryptoKeysSettings.Encryption=True
 CryptoKeysSettings.Signing=True
 GameplayTagsSettings.GameplayTags=True
@@ -2947,7 +2948,7 @@ PlayerController=Landscape.Collision.Collision,LandscapeStreamingProxy.Transform
 LandscapeGizmoActiveActor=Landscape.Collision.Collision,LandscapeStreamingProxy.TransformCommon.Transform,LandscapeGizmoRenderComponent.Physics.ConstraintsGroup,LandscapeGizmoRenderComponent.Collision.Collision,LandscapeGizmoRenderComponent.TransformCommon.Transform,BP_PlayerCar_C.Physics.ConstraintsGroup,BP_PlayerCar_C.PostProcess.Lens,MyPlayerCar_C.Materials.MaterialList,MyPlayerCar_C.Physics.ConstraintsGroup,MyPlayerCar_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.VehicleMovementComponent,StaticMeshComponent.Physics.ConstraintsGroup,
 LandscapeGizmoActiveActor=Landscape.Collision.Collision,LandscapeStreamingProxy.TransformCommon.Transform,LandscapeGizmoRenderComponent.Physics.ConstraintsGroup,LandscapeGizmoRenderComponent.Collision.Collision,LandscapeGizmoRenderComponent.TransformCommon.Transform,
 None=======
-InputMappingContext=InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/IA_Look.IA_Look,InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings.None,
+InputMappingContext=InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/IA_Look.IA_Look,InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/IA_Pause.IA_Pause,
 CameraComponent=Landscape.Collision.Collision,BP_PlayerCar_C.Physics.ConstraintsGroup,BP_PlayerCar_C.PostProcess.Lens,MyPlayerCar_C.Materials.MaterialList,MyPlayerCar_C.Physics.ConstraintsGroup,MyPlayerCar_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.VehicleMovementComponent,
 PropertyWrapper=Landscape.Collision.Collision,BP_PlayerCar_C.Physics.ConstraintsGroup,BP_PlayerCar_C.PostProcess.Lens,MyPlayerCar_C.Materials.MaterialList,MyPlayerCar_C.Physics.ConstraintsGroup,MyPlayerCar_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.VehicleMovementComponent,LandscapeStreamingProxy.TransformCommon.Transform,LandscapeGizmoRenderComponent.Physics.ConstraintsGroup,LandscapeGizmoRenderComponent.Collision.Collision,LandscapeGizmoRenderComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,
 Actor=Landscape.Collision.Collision,LandscapeStreamingProxy.TransformCommon.Transform,LandscapeGizmoRenderComponent.Physics.ConstraintsGroup,LandscapeGizmoRenderComponent.Collision.Collision,LandscapeGizmoRenderComponent.TransformCommon.Transform,
@@ -3102,26 +3103,26 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/pauseMenu
-MRUItem1=/Game/GamePieces/BP_OutOfBounds
-MRUItem2=/Game/Sounds/BackgroundMusic
-MRUItem3=/Game/Sounds/NewMetaSoundSource
-MRUItem4=/Game/Sounds/lifelike-126735
-MRUItem5=/Game/Levels/Main_Landscape
-MRUItem6=/Game/Player/BP_PlayerCar
-MRUItem7=/Game/ProjectMetaRacers/Framework/SpawnPlayerCar
-MRUItem8=/Game/GamePieces/BP_JumpPad
-MRUItem9=/Game/Levels/AltMap
-MRUItem10=/Game/ProjectMetaRacers/Framework/GM_ProjectMetaRacers
-MRUItem11=/Game/GamePieces/FinishLine/M_FinshLine
-MRUItem12=/Game/GamePieces/BP_FinishLine
-MRUItem13=/Game/GamePieces/BP_Checkpoint
-MRUItem14=/Game/GamePieces/BP_BoostPad
-MRUItem15=/Game/Player/TorqueCurve
-MRUItem16=/Game/GamePieces/StartLine/BP_StartLine
-MRUItem17=/Game/Levels/Road/Road_Spline_Model_For_UE5_Tutorial_-_Gorka_Games
-MRUItem18=/Game/GamePieces/BP_CircleCheckpoint
-MRUItem19=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem0=/Game/Player/Input/Actions/IA_Pause
+MRUItem1=/Game/Player/Input/IMC_Default
+MRUItem2=/Game/Player/BP_PlayerCar
+MRUItem3=/Game/UI/pauseMenu
+MRUItem4=/Game/GamePieces/BP_OutOfBounds
+MRUItem5=/Game/Sounds/BackgroundMusic
+MRUItem6=/Game/Sounds/NewMetaSoundSource
+MRUItem7=/Game/Sounds/lifelike-126735
+MRUItem8=/Game/Levels/Main_Landscape
+MRUItem9=/Game/ProjectMetaRacers/Framework/SpawnPlayerCar
+MRUItem10=/Game/GamePieces/BP_JumpPad
+MRUItem11=/Game/Levels/AltMap
+MRUItem12=/Game/ProjectMetaRacers/Framework/GM_ProjectMetaRacers
+MRUItem13=/Game/GamePieces/FinishLine/M_FinshLine
+MRUItem14=/Game/GamePieces/BP_FinishLine
+MRUItem15=/Game/GamePieces/BP_Checkpoint
+MRUItem16=/Game/GamePieces/BP_BoostPad
+MRUItem17=/Game/Player/TorqueCurve
+MRUItem18=/Game/GamePieces/StartLine/BP_StartLine
+MRUItem19=/Game/Levels/Road/Road_Spline_Model_For_UE5_Tutorial_-_Gorka_Games
 
 [Interchange_StackName__Assets__PipelineClassName_InterchangeGenericMaterialPipeline]
 bImportMaterials=True
@@ -3769,7 +3770,7 @@ BP_BackWheel_C="\"Object\" "
 FbxImportUI="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" "
-DataAsset="\"Object\" \"Object.Action.Modifiers\" \"Object.Action.Modifiers.Modifiers[0]\" "
+DataAsset="\"Object\" \"Object.Mappings.Mappings.Mappings[2]\" \"Object.Mappings.Mappings.Mappings[2].Triggers\" "
 AssetViewerSettings="\"Object\" "
 SkeletalMesh="\"Object\" "
 SkinnedAsset="\"Object\" "
@@ -3826,8 +3827,8 @@ mainMenu_C="\"Object\" "
 UserWidget="\"Object\" "
 Image="\"Object\" \"Object.Appearance.Brush\" "
 LandscapeEditorObject="\"Object\" "
-InputAction="\"Object\" \"Object.Action.Modifiers\" \"Object.Action.Modifiers.Modifiers[0]\" "
-InputMappingContext="\"Object\" "
+InputAction="\"Object\" \"Object.Action.Modifiers\" "
+InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[2]\" \"Object.Mappings.Mappings.Mappings[2].Triggers\" "
 Actor="\"Object\" "
 BillboardComponent="\"Object\" "
 K2Node_SetFieldsInStruct="\"Object\" "
