--- a/ProjectMetaRacers/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ProjectMetaRacers/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -160,8 +160,8 @@ CurrentPosGridSize=1
 LastLevel=/Game/Levels/Main_Landscape
 
 [ModuleFileTracking]
-ProjectMetaRacers.TimeStamp=2023.07.23-23.58.58
-ProjectMetaRacers.LastCompileMethod=External
+ProjectMetaRacers.TimeStamp=2023.07.24-00.23.09
+ProjectMetaRacers.LastCompileMethod=Runtime
 StorageServerClient.TimeStamp=2023.05.25-03.00.35
 StorageServerClient.LastCompileMethod=External
 CookOnTheFly.TimeStamp=2023.05.25-03.00.10
@@ -1186,7 +1186,7 @@ PhysicsAssetEditor.TimeStamp=2023.05.25-02.37.57
 PhysicsAssetEditor.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=-8.000 Y=2.000
@@ -2923,7 +2923,7 @@ LandscapeSplineControlPoint=LandscapeSplineControlPoint.Collision.Collision,
 CapsuleComponent=
 PlayerStart=Landscape.Collision.Collision,LandscapeStreamingProxy.TransformCommon.Transform,LandscapeGizmoRenderComponent.Physics.ConstraintsGroup,LandscapeGizmoRenderComponent.Collision.Collision,LandscapeGizmoRenderComponent.TransformCommon.Transform,BP_PlayerCar_C.Physics.ConstraintsGroup,BP_PlayerCar_C.PostProcess.Lens,MyPlayerCar_C.Materials.MaterialList,MyPlayerCar_C.Physics.ConstraintsGroup,MyPlayerCar_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.VehicleMovementComponent,StaticMeshComponent.Physics.ConstraintsGroup,
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,
 LandscapeStreamingProxy=Landscape.Collision.Collision,LandscapeStreamingProxy.TransformCommon.Transform,LandscapeGizmoRenderComponent.Physics.ConstraintsGroup,LandscapeGizmoRenderComponent.Collision.Collision,LandscapeGizmoRenderComponent.TransformCommon.Transform,BP_PlayerCar_C.Physics.ConstraintsGroup,BP_PlayerCar_C.PostProcess.Lens,MyPlayerCar_C.Materials.MaterialList,MyPlayerCar_C.Physics.ConstraintsGroup,MyPlayerCar_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.VehicleMovementComponent,StaticMeshComponent.Physics.ConstraintsGroup,
 WorldDataLayers=Landscape.Collision.Collision,
 BoxComponent=Landscape.Collision.Collision,BP_PlayerCar_C.Physics.ConstraintsGroup,BP_PlayerCar_C.PostProcess.Lens,MyPlayerCar_C.Materials.MaterialList,MyPlayerCar_C.Physics.ConstraintsGroup,MyPlayerCar_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.VehicleMovementComponent,LandscapeStreamingProxy.TransformCommon.Transform,LandscapeGizmoRenderComponent.Physics.ConstraintsGroup,LandscapeGizmoRenderComponent.Collision.Collision,LandscapeGizmoRenderComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.tp pos,
@@ -2959,13 +2959,13 @@ MulticastInlineDelegatePropertyWrapper=Landscape.Collision.Collision,BP_PlayerCa
 K2Node_MacroInstance=Landscape.Collision.Collision,BP_PlayerCar_C.Physics.ConstraintsGroup,BP_PlayerCar_C.PostProcess.Lens,MyPlayerCar_C.Materials.MaterialList,MyPlayerCar_C.Physics.ConstraintsGroup,MyPlayerCar_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.VehicleMovementComponent,LandscapeStreamingProxy.TransformCommon.Transform,LandscapeGizmoRenderComponent.Physics.ConstraintsGroup,LandscapeGizmoRenderComponent.Collision.Collision,LandscapeGizmoRenderComponent.TransformCommon.Transform,
 BP_Checkpoint_C=Landscape.Collision.Collision,BP_PlayerCar_C.Physics.ConstraintsGroup,BP_PlayerCar_C.PostProcess.Lens,MyPlayerCar_C.Materials.MaterialList,MyPlayerCar_C.Physics.ConstraintsGroup,MyPlayerCar_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.VehicleMovementComponent,LandscapeStreamingProxy.TransformCommon.Transform,LandscapeGizmoRenderComponent.Physics.ConstraintsGroup,LandscapeGizmoRenderComponent.Collision.Collision,LandscapeGizmoRenderComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,
 BP_FinishLine_C=Landscape.Collision.Collision,BP_PlayerCar_C.Physics.ConstraintsGroup,BP_PlayerCar_C.PostProcess.Lens,MyPlayerCar_C.Materials.MaterialList,MyPlayerCar_C.Physics.ConstraintsGroup,MyPlayerCar_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.VehicleMovementComponent,LandscapeStreamingProxy.TransformCommon.Transform,LandscapeGizmoRenderComponent.Physics.ConstraintsGroup,LandscapeGizmoRenderComponent.Collision.Collision,LandscapeGizmoRenderComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,
-BP_BoostPad_C=
+BP_BoostPad_C=StaticMeshComponent.Physics.ConstraintsGroup,Landscape.Collision.Collision,BP_PlayerCar_C.Physics.ConstraintsGroup,BP_PlayerCar_C.PostProcess.Lens,MyPlayerCar_C.Materials.MaterialList,MyPlayerCar_C.Physics.ConstraintsGroup,MyPlayerCar_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.VehicleMovementComponent,LandscapeStreamingProxy.TransformCommon.Transform,LandscapeGizmoRenderComponent.Physics.ConstraintsGroup,LandscapeGizmoRenderComponent.Collision.Collision,LandscapeGizmoRenderComponent.TransformCommon.Transform,
 WheeledVehiclePawn=Landscape.Collision.Collision,BP_PlayerCar_C.Physics.ConstraintsGroup,BP_PlayerCar_C.PostProcess.Lens,MyPlayerCar_C.Materials.MaterialList,MyPlayerCar_C.Physics.ConstraintsGroup,MyPlayerCar_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.VehicleMovementComponent,LandscapeStreamingProxy.TransformCommon.Transform,LandscapeGizmoRenderComponent.Physics.ConstraintsGroup,LandscapeGizmoRenderComponent.Collision.Collision,LandscapeGizmoRenderComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,
 MovementComponent=Landscape.Collision.Collision,LandscapeStreamingProxy.TransformCommon.Transform,LandscapeGizmoRenderComponent.Physics.ConstraintsGroup,LandscapeGizmoRenderComponent.Collision.Collision,LandscapeGizmoRenderComponent.TransformCommon.Transform,BP_PlayerCar_C.Physics.ConstraintsGroup,BP_PlayerCar_C.PostProcess.Lens,MyPlayerCar_C.Materials.MaterialList,MyPlayerCar_C.Physics.ConstraintsGroup,MyPlayerCar_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.VehicleMovementComponent,StaticMeshComponent.Physics.ConstraintsGroup,
 Pawn=Landscape.Collision.Collision,BP_PlayerCar_C.Physics.ConstraintsGroup,BP_PlayerCar_C.PostProcess.Lens,MyPlayerCar_C.Materials.MaterialList,MyPlayerCar_C.Physics.ConstraintsGroup,MyPlayerCar_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.VehicleMovementComponent,LandscapeStreamingProxy.TransformCommon.Transform,LandscapeGizmoRenderComponent.Physics.ConstraintsGroup,LandscapeGizmoRenderComponent.Collision.Collision,LandscapeGizmoRenderComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,
 BP_OutOfBounds_C=Landscape.Collision.Collision,BP_PlayerCar_C.Physics.ConstraintsGroup,BP_PlayerCar_C.PostProcess.Lens,MyPlayerCar_C.Materials.MaterialList,MyPlayerCar_C.Physics.ConstraintsGroup,MyPlayerCar_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.VehicleMovementComponent,LandscapeStreamingProxy.TransformCommon.Transform,LandscapeGizmoRenderComponent.Physics.ConstraintsGroup,LandscapeGizmoRenderComponent.Collision.Collision,LandscapeGizmoRenderComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,
 BP_CircleCheckpoint_C=StaticMeshComponent.Physics.ConstraintsGroup,Landscape.Collision.Collision,BP_PlayerCar_C.Physics.ConstraintsGroup,BP_PlayerCar_C.PostProcess.Lens,MyPlayerCar_C.Materials.MaterialList,MyPlayerCar_C.Physics.ConstraintsGroup,MyPlayerCar_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.VehicleMovementComponent,LandscapeStreamingProxy.TransformCommon.Transform,LandscapeGizmoRenderComponent.Physics.ConstraintsGroup,LandscapeGizmoRenderComponent.Collision.Collision,LandscapeGizmoRenderComponent.TransformCommon.Transform,
-LandscapeSplinesComponent=Landscape.Collision.Collision,LandscapeStreamingProxy.TransformCommon.Transform,LandscapeGizmoRenderComponent.Physics.ConstraintsGroup,LandscapeGizmoRenderComponent.Collision.Collision,LandscapeGizmoRenderComponent.TransformCommon.Transform,BP_PlayerCar_C.Physics.ConstraintsGroup,BP_PlayerCar_C.PostProcess.Lens,MyPlayerCar_C.Materials.MaterialList,MyPlayerCar_C.Physics.ConstraintsGroup,MyPlayerCar_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.VehicleMovementComponent,StaticMeshComponent.Physics.ConstraintsGroup,
+LandscapeSplinesComponent=StaticMeshComponent.Physics.ConstraintsGroup,Landscape.Collision.Collision,BP_PlayerCar_C.Physics.ConstraintsGroup,BP_PlayerCar_C.PostProcess.Lens,MyPlayerCar_C.Materials.MaterialList,MyPlayerCar_C.Physics.ConstraintsGroup,MyPlayerCar_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.VehicleMovementComponent,LandscapeStreamingProxy.TransformCommon.Transform,LandscapeGizmoRenderComponent.Physics.ConstraintsGroup,LandscapeGizmoRenderComponent.Collision.Collision,LandscapeGizmoRenderComponent.TransformCommon.Transform,
 LandscapeSplineActor=Landscape.Collision.Collision,LandscapeStreamingProxy.TransformCommon.Transform,LandscapeGizmoRenderComponent.Physics.ConstraintsGroup,LandscapeGizmoRenderComponent.Collision.Collision,LandscapeGizmoRenderComponent.TransformCommon.Transform,BP_PlayerCar_C.Physics.ConstraintsGroup,BP_PlayerCar_C.PostProcess.Lens,MyPlayerCar_C.Materials.MaterialList,MyPlayerCar_C.Physics.ConstraintsGroup,MyPlayerCar_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.VehicleMovementComponent,StaticMeshComponent.Physics.ConstraintsGroup,
 BP_JumpPad_C=
 MediaPlate=StaticMeshComponent.Physics.ConstraintsGroup,Landscape.Collision.Collision,BP_PlayerCar_C.Physics.ConstraintsGroup,BP_PlayerCar_C.PostProcess.Lens,MyPlayerCar_C.Materials.MaterialList,MyPlayerCar_C.Physics.ConstraintsGroup,MyPlayerCar_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.VehicleMovementComponent,LandscapeStreamingProxy.TransformCommon.Transform,LandscapeGizmoRenderComponent.Physics.ConstraintsGroup,LandscapeGizmoRenderComponent.Collision.Collision,LandscapeGizmoRenderComponent.TransformCommon.Transform,
@@ -3619,7 +3619,7 @@ EditorLoadingSavingSettings="\"Object\" \"Object.AutoReimport\" \"Object.Bluepri
 CrashReportsPrivacySettings="\"Object\" \"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object\" \"Object.Options.bSendUsageData\" "
 LandscapeGizmoRenderComponent="\"Object\" "
-PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 LandscapeComponent=
