--- a/ProjectMetaRacers/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ProjectMetaRacers/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -160,8 +160,8 @@ CurrentPosGridSize=1
 LastLevel=/Game/Levels/Main_Landscape
 
 [ModuleFileTracking]
-ProjectMetaRacers.TimeStamp=2023.07.24-00.23.09
-ProjectMetaRacers.LastCompileMethod=Runtime
+ProjectMetaRacers.TimeStamp=2023.07.24-00.43.52
+ProjectMetaRacers.LastCompileMethod=External
 StorageServerClient.TimeStamp=2023.05.25-03.00.35
 StorageServerClient.LastCompileMethod=External
 CookOnTheFly.TimeStamp=2023.05.25-03.00.10
@@ -1186,13 +1186,13 @@ PhysicsAssetEditor.TimeStamp=2023.05.25-02.37.57
 PhysicsAssetEditor.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=-8.000 Y=2.000
 ScreenPosition=X=636.000 Y=336.000
 WindowSize=X=1282.000 Y=722.000
-WindowSize=X=1288.000 Y=728.000
+WindowSize=X=1289.600 Y=729.600
 None=======
 OpenAssetsAtExit=/Game/Player/BP_PlayerCar.BP_PlayerCar
 InitiallyMaximized=True
@@ -2923,7 +2923,7 @@ LandscapeSplineControlPoint=LandscapeSplineControlPoint.Collision.Collision,
 CapsuleComponent=
 PlayerStart=Landscape.Collision.Collision,LandscapeStreamingProxy.TransformCommon.Transform,LandscapeGizmoRenderComponent.Physics.ConstraintsGroup,LandscapeGizmoRenderComponent.Collision.Collision,LandscapeGizmoRenderComponent.TransformCommon.Transform,BP_PlayerCar_C.Physics.ConstraintsGroup,BP_PlayerCar_C.PostProcess.Lens,MyPlayerCar_C.Materials.MaterialList,MyPlayerCar_C.Physics.ConstraintsGroup,MyPlayerCar_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.VehicleMovementComponent,StaticMeshComponent.Physics.ConstraintsGroup,
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,
+WorldPartitionRuntimeSpatialHash=
 LandscapeStreamingProxy=Landscape.Collision.Collision,LandscapeStreamingProxy.TransformCommon.Transform,LandscapeGizmoRenderComponent.Physics.ConstraintsGroup,LandscapeGizmoRenderComponent.Collision.Collision,LandscapeGizmoRenderComponent.TransformCommon.Transform,BP_PlayerCar_C.Physics.ConstraintsGroup,BP_PlayerCar_C.PostProcess.Lens,MyPlayerCar_C.Materials.MaterialList,MyPlayerCar_C.Physics.ConstraintsGroup,MyPlayerCar_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.VehicleMovementComponent,StaticMeshComponent.Physics.ConstraintsGroup,
 WorldDataLayers=Landscape.Collision.Collision,
 BoxComponent=Landscape.Collision.Collision,BP_PlayerCar_C.Physics.ConstraintsGroup,BP_PlayerCar_C.PostProcess.Lens,MyPlayerCar_C.Materials.MaterialList,MyPlayerCar_C.Physics.ConstraintsGroup,MyPlayerCar_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.VehicleMovementComponent,LandscapeStreamingProxy.TransformCommon.Transform,LandscapeGizmoRenderComponent.Physics.ConstraintsGroup,LandscapeGizmoRenderComponent.Collision.Collision,LandscapeGizmoRenderComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.tp pos,
@@ -2990,7 +2990,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/UI
+ContentBrowserDrawer.SelectedPaths=/Game/Player
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3563,6 +3563,12 @@ LiveCodingSettings=True
 HardwareTargetingSettings=True
 AssetToolsSettings=True
 DataDrivenConsoleVariableSettings=True
+EditorKeyboardShortcutSettings=True
+EditorPerProjectUserSettings=True
+LevelEditorViewportSettings=True
+TakeRecorderUserSettings=True
+AutomationTestSettings=True
+SourceCodeAccessSettings=True
 
 [DetailPropertyExpansion]
 ProjectPackagingSettings="\"Object\" \"Object.Packaging.IniKeyDenylist\" \"Object.Packaging.IniSectionDenylist\" \"Object.Packaging.DirectoriesToAlwaysCook\" "
@@ -3578,7 +3584,7 @@ CrowdManager="\"Object\" \"Object.Config.AvoidanceConfig\" \"Object.Config.Avoid
 CrowdManagerBase="\"Object\" \"Object.Config.AvoidanceConfig\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[0]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[1]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[2]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[3]\" "
 DebugCameraControllerSettings="\"Object\" \"Object.General.CycleViewModes\" "
 EnhancedInputDeveloperSettings="\"Object\" \"Object.Enhanced Input.PlatformSettings\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[0].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[1].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[2].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[3].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[4].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[5].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[6].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[7].Object.Default\" "
-DeveloperSettingsBackedByCVars="\"Object\" \"Object.Enhanced Input.PlatformSettings\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[0].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[1].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[2].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[3].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[4].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[5].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[6].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[7].Object.Default\" "
+DeveloperSettingsBackedByCVars="\"Object\" "
 InputModifierDeadZone="\"Object\" "
 InputModifier="\"Object\" "
 InputModifierFOVScaling="\"Object\" "
