--- a/ProjectMetaRacers/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ProjectMetaRacers/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -160,7 +160,7 @@ CurrentPosGridSize=1
 LastLevel=/Game/Levels/Main_Landscape
 
 [ModuleFileTracking]
-ProjectMetaRacers.TimeStamp=2023.07.24-00.43.52
+ProjectMetaRacers.TimeStamp=2023.07.24-01.26.41
 ProjectMetaRacers.LastCompileMethod=External
 StorageServerClient.TimeStamp=2023.05.25-03.00.35
 StorageServerClient.LastCompileMethod=External
@@ -1186,13 +1186,13 @@ PhysicsAssetEditor.TimeStamp=2023.05.25-02.37.57
 PhysicsAssetEditor.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=-8.000 Y=2.000
 ScreenPosition=X=636.000 Y=336.000
 WindowSize=X=1282.000 Y=722.000
-WindowSize=X=1289.600 Y=729.600
+WindowSize=X=1290.000 Y=730.000
 None=======
 OpenAssetsAtExit=/Game/Player/BP_PlayerCar.BP_PlayerCar
 InitiallyMaximized=True
@@ -3584,7 +3584,7 @@ CrowdManager="\"Object\" \"Object.Config.AvoidanceConfig\" \"Object.Config.Avoid
 CrowdManagerBase="\"Object\" \"Object.Config.AvoidanceConfig\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[0]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[1]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[2]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[3]\" "
 DebugCameraControllerSettings="\"Object\" \"Object.General.CycleViewModes\" "
 EnhancedInputDeveloperSettings="\"Object\" \"Object.Enhanced Input.PlatformSettings\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[0].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[1].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[2].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[3].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[4].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[5].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[6].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[7].Object.Default\" "
-DeveloperSettingsBackedByCVars="\"Object\" "
+DeveloperSettingsBackedByCVars="\"Object\" \"Object.Enhanced Input.PlatformSettings\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[0].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[1].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[2].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[3].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[4].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[5].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[6].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[7].Object.Default\" "
 InputModifierDeadZone="\"Object\" "
 InputModifier="\"Object\" "
 InputModifierFOVScaling="\"Object\" "
